--- a/css/WoDe/personInfo.less
+++ b/css/WoDe/personInfo.less
@@ -10,9 +10,7 @@
         }
     }
     ul li{
-        
                 height: 44px;
-            
         img{
             position: absolute;
             display: inline-block;
@@ -20,6 +18,10 @@
             height: 80px;
             border-radius: 40px;
             right:10px
+        }
+        span:nth-of-type(2){
+            float: right;
+            font-size: 13px;
         }
     }
  
