--- a/css/WoDe/MyCollection.less
+++ b/css/WoDe/MyCollection.less
@@ -1,38 +1,116 @@
 @import "../common.less";
-.container {
-    background: url(../reaource/bg.jpg) no-repeat border-box  fixed;
-    background-size:100% 100%;-moz-background-size:100% 100%;
+body {
+    background: url(../../reaource/bg.jpg) no-repeat border-box fixed;
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
 
-    .MyShopCollection {
-        margin-top: 10px;
-        margin-left: 10px;
+.container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    .mui-content {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
     }
     ul {
+        background-color: transparent;
+        height: 100%;
+        width: 100%;
         padding: 0;
         list-style: none;
-        img {
-            width: 100px;
-            height: 80px;
+        li {
+            background-color: transparent;
+            display: block;
+            position: relative;
+            .left {
+                width: 100px;
+                height: 80px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                margin-left: 15px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .right {
+                position: absolute;
+                left: 120px;
+                top: 0;
+                p:first-of-type {
+                    color: black;
+                    font-size: 15px;
+                }
+                p {
+                    margin-top: 5px;
+                    padding: 0;
+                    width: 100%;
+                    .textLine(2);
+                }
+                span {
+                    font-size: 14px;
+                }
+            }
         }
+    }
+}
+
+#listView {
+    padding: 0;
+    list-style: none;
+    position: relative;
+    .cellItem {
+        border-bottom: solid 1px lightgray;
+        height: 100px;
         .left {
+            margin-top: 10px;
             margin-left: 10px;
-            float: left;
+//          background-color: red;
+            padding: 0;
+            img {
+                width: 80px;
+                display: block;
+                height: 80px;
+                margin: 0 auto;
+               
+            }
         }
         .right {
-            margin-left: 120px;
-            width: 200px;
-            p:first-of-type {
-                color: black;
-                font-size: 15px;
-            }
+//          background-color: palegoldenrod;
+            
+            margin-left: 5px;
             p {
                 padding: 0;
-                width: 100%;
+                margin: 0;
+                font-size: 13px;
                 .textLine(2);
             }
         }
-        .separateLine {
-            .separateLine;
-        }
     }
+}
+.noRecord{
+    background-color: transparent;
+    color: gray;
+    font-size: 0.875rem;
+    position: absolute;
+    width: 50%;
+    height: 200px;
+    top:50%;
+    left: 25%;
+    transform: translateY(-50%);
+    text-align: center;
+//  transform: translateX(-50%);
 }
