--- a/css/WoDe/MyOrder.less
+++ b/css/WoDe/MyOrder.less
@@ -1,8 +1,28 @@
+.container {
+    width: 100%;
+    height: 100%;
+    background: url(../reaource/bg.jpg) no-repeat border-box fixed;
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    .mui-content {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        ul{
+             background-color: transparent;
+             li{
+                  background-color: transparent;
+             }
+        }
+    }
+}
 .mui-scroll-wrapper{
-    background: url(../reaource/bg.jpg) no-repeat border-box  fixed;
-    background-size:100% 100%;-moz-background-size:100% 100%;
+    background-color: transparent;
+//  background: url(../reaource/bg.jpg) no-repeat border-box  fixed;
+//  background-size:100% 100%;-moz-background-size:100% 100%;
 }
 .noRecord{
+    background-color: transparent;
     color: gray;
     font-size: 0.875rem;
     position: absolute;
