删除注释之前

--- a/css/HaoDian/HaoDian.less
+++ b/css/HaoDian/HaoDian.less
@@ -56,20 +56,16 @@
             }
         }
     }
-    .Banner{
+    .Banner {
         width: 100%;
-        img{
+        img {
             width: 90%;
             margin-left: 5%;
             margin-top: 10px;
         }
     }
-     .mui-content {
+    .mui-content {
         background-color: transparent;
-//      border-bottom-width: 1px;
-//      border-bottom-color: gainsboro;
-//      border-bottom-style: solid;
-//      width: 100%;
         overflow: visible;
         .mui-scroll {
             //          box-sizing: border-box;
@@ -77,15 +73,14 @@
             display: -webkit-flex;
             flex-direction: row;
             justify-content: space-around;
-//          width: 100%;
+            //          width: 100%;
             height: 80px;
             .mui-active {
                 color: red;
             }
-            
         }
     }
-    .bottom{
+    .bottom {
         #listView {
             padding: 0;
             list-style: none;
@@ -113,5 +108,17 @@
                 }
             }
         }
+    }
+    .noItemsHint {
+        color: gray;
+        text-align: center;
+//      width: 100%;
+//      height: 100;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        bottom: 0;
+        margin: auto;
     }
 }
