--- a/css/common.less
+++ b/css/common.less
@@ -19,6 +19,14 @@
     -webkit-box-orient: vertical;
 }
 
+.commonBCColor {
+    background-color: #47342f;
+}
+
+.commonFontColor {
+    color: #47342f;
+}
+
 .separateLine {
     width: 85%;
     margin: 0 auto;
